[gd_scene load_steps=2 format=3 uid="uid://b2qdw8yanxnog"]

[ext_resource type="Script" path="res://actors/ui/PlayerUI.gd" id="1_fuj1t"]

[node name="PlayerUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_fuj1t")

[node name="PausePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 219.0
offset_top = 93.0
offset_right = -219.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 7.0
offset_right = -13.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Paused"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="Resume" type="Button" parent="PausePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Resume"

[node name="Quit" type="Button" parent="PausePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Quit"

[connection signal="pressed" from="PausePanel/VBoxContainer/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePanel/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
